<android.support.v4.view.ViewPager
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/pager"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.MainActivity">

	<android.support.v4.view.PagerTabStrip
		android:id="@+id/pager_title_strip"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:layout_gravity="top"
		android:background="@color/background_purple"
		android:paddingBottom="4dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="4dp"
		android:textColor="#fff"/>

</android.support.v4.view.ViewPager>
